# openminutes

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: 2026-06-14-openminutes-product-spec.md
prototypes/: desktop-ui.html  ui.html
src/: App.nativeCapture.test.tsx  App.test.tsx  App.tsx  CapsuleApp.tsx  main.tsx  styles.css  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  deepgram_realtime.rs  doubao_realtime.rs  lib.rs  main.rs  storage.rs
src/desktop/: apiKeyRepository.test.ts  apiKeyRepository.ts  audioCapture.test.ts  audioCapture.ts  audioImport.test.ts  audioImport.ts  capsuleBridge.ts  doubaoTranscription.test.ts  doubaoTranscription.ts  markdownExport.test.ts  markdownExport.ts  meetingRepository.test.ts  meetingRepository.ts  providerConnection.test.ts  providerConnection.ts  realtimeTranscript.ts  settingsRepository.test.ts  settingsRepository.ts  tauri.ts
src/domain/: apiKey.ts  capsule.test.ts  capsule.ts  citations.test.ts  citations.ts  deepgramProvider.test.ts  deepgramProvider.ts  markdown.test.ts  markdown.ts  meeting.test.ts  meeting.ts  openAiProvider.test.ts  openAiProvider.ts  providerFactory.test.ts  providerFactory.ts  providers.test.ts  providers.ts  settings.test.ts  settings.ts  storage.test.ts  storage.ts  transcriptRevision.test.ts  transcriptRevision.ts
