[package]
name = "openminutes"
version = "0.1.0"
description = "Open-source, local-first AI meeting notes desktop app"
authors = ["OpenMinutes Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "openminutes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "thin"
strip = true
