[package]
name = "openminutes"
version = "0.1.0"
description = "Open-source, local-first AI meeting notes desktop app"
authors = ["OpenMinutes Contributors"]
license = "MIT"
edition = "2021"
default-run = "openminutes"

[lib]
name = "openminutes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
flate2 = "1"
futures-util = "0.3"
hound = "3"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "=2.11.2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.27", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-global-shortcut = "2"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "thin"
strip = true
